--- a/scss/bundle.scss
+++ b/scss/bundle.scss
@@ -5,4 +5,7 @@
 @import "../node_modules/slick-carousel/slick/slick.scss";
 
 // main
+@import "./modules/hamburger.scss";
+
+// main
 @import "./modules/main.scss";
